source/files/stylesheets/style.css
/* ... */
.btn:hover {
	text-decoration: none;
}
.btn:active {
	position: relative;
	top: 1px;
}

/* BUTTON COLORS */
.btn {
	color: #fff;
	border: solid 1px #954712;
	background: #C05F1C;
	background: -webkit-gradient(linear, left top, left bottom, from(#d47b3e), to(#C05F1C));
	background: -moz-linear-gradient(top,  #d47b3e,  #C05F1C);
	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#d47b3e', endColorstr='#C05F1C');
}
.btn:hover {
	border: solid 1px #954712;
	background: #C05F1C;
	background: -webkit-gradient(linear, left top, left bottom, from(#A05617), to(#C05F1C));
	background: -moz-linear-gradient(top,  #A05617,  #C05F1C);
	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#A05617', endColorstr='#C05F1C');
}

.btn-light {
	color: #C05F1C;
	text-shadow: 0 1px 1px rgba(0,0,0,.185);
	border: solid 1px #fae6c0;
	background: #feecc1;
	background: -webkit-gradient(linear, left top, left bottom, from(#fffaed), to(#feecc1));
	background: -moz-linear-gradient(top,  #fffaed,  #feecc1);
	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffaed', endColorstr='#feecc1');
}
.btn-light:hover {
	border: solid 1px #fae6c0;
	background: #fff7e3;
	background: -webkit-gradient(linear, left top, left bottom, from(#f9e3bb), to(#fff7e3));
	background: -moz-linear-gradient(top,  #f9e3bb,  #fff7e3);
	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9e3bb', endColorstr='#fff7e3');
}

.btn-dark {
	color: #fff;
	border: solid 1px #9983b0;
	background: #7f6799;
	background: -webkit-gradient(linear, left top, left bottom, from(#c1a7dd), to(#7f6799));
	background: -moz-linear-gradient(top,  #c1a7dd,  #7f6799);
	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#c1a7dd', endColorstr='#7f6799');
}
.btn-dark:hover {
	color: #fff;
	border: solid 1px #9983b0;
	background: #7f6799;
	background: -webkit-gradient(linear, left top, left bottom, from(#725d88), to(#7f6799));
	background: -moz-linear-gradient(top,  #725d88,  #7f6799);
	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#725d88', endColorstr='#7f6799');
}

.btn-space {margin-top:3em !important; margin-bottom:3em;}


/* @end */

/* @group Header */

body{
  border-top: 1px solid #a09dc4;
}
header#header {
  border-top: 4px solid #514a6b;
  background: #403e56 url(images/matte-blue.png) bottom repeat-x;
  color: white;
  white-space: nowrap;
  z-index: 1;
}

header#header .site-width{
  padding: 1.4em 0 0;
}

header#header a {
  text-decoration: none;
  display: block;
}

header#header h1,
header#header ul,
header#header ul li {
	margin: 0;
  -webkit-transition: 0.125s background linear;
  -moz-transition: 0.125s background linear;
}

header#header h1 {
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 0.1em;
  display: block;
  height: 36px;
  width: 127px;
  float: left;
}

header#header h1 a {
	display: block;
	height: 100%;
	width: 100%;
  background: url(images/puppet-labs.png) left center no-repeat;
  position: relative;
  opacity: 0.5;
  -webkit-transition: 0.33s linear;
  -moz-transition: 0.33s linear;
  border: none;
}

header#header h1 a:hover {
  opacity: 1;
}

header#header h1 a span {
  display: none;
}

/* @group Global Navigation */

header#header ul#global-navigation{
	margin-left: 282px;
	margin-top: 18px;
  background: #2b2539;
  -webkit-border-top-left-radius: 6px;
  -webkit-border-top-right-radius: 6px;
-moz-border-radius: 6px;
-webkit-box-shadow: 0 -1px 0 rgba(255,255,255,0.05)
}

header#header ul#global-navigation > li {
  margin: 0 -0.2em;
  width: 20%;
  max-width: 180px;
  display: inline-block;
}

body#puppet header#header li#puppet-tab > a,
body#services header#header li#services-tab > a,
body#resources header#header li#resources-tab > a,
body#blog header#header li#community-tab > a,
body.blog header#header li#community-tab > a,
body.single header#header li#community-tab > a,
body#company header#header li#company-tab > a {
  color: white;
  border-top-color: #a965a9;
  background: #2e283c;
}

body#puppet header#header li#puppet-tab > a span.subtitle,
body#services header#header li#services-tab > a span.subtitle,
body#support header#header li#services-tab > a span.subtitle,
body#blog header#header li#community-tab > a span.subtitle,
body.blog header#header li#community-tab > a span.subtitle,
body.single header#header li#community-tab > a span.subtitle,
body#company header#header li#company-tab > a span.subtitle {
  color: #aaa;
}

header#header ul#global-navigation > li:first-child a{
  border-left: none !important;
  -webkit-border-top-left-radius: 6px;
  -moz-border-radius: 6px;
}

header#header ul#global-navigation > li:last-child a{
	border-right: none !important;
}

header#header ul#global-navigation > li > a {
  color: #747380;
  padding: 0.5em 20px 0.67em;
  font-weight: bold;
  border-right: 1px solid rgba(0,0,0,0.1);
  border-left: 1px solid rgba(255,255,255,0.05);
}

header#header ul#global-navigation > li > a:hover {
  background: #503577 !important;
  color: white;
  text-decoration: none;
  border-top-color: #f6d072;
  border-left-color: #593f7e;
  border-right-color: rgba(0,0,0,0.33);
}

header#header ul#global-navigation > li > a:active {
  color: #ccc;
  background-color: #442d65;
  border-top-color: #ffcb4d;
}

header#header ul#global-navigation > li > a:active span.drop-down-trigger {
  opacity: 0.5;
}

header#header ul#global-navigation > li.active > a {
  background: #2c2639;
}

header#header ul li.with-submenu > ul {
  background: #fff6e5;
  position: absolute;
  left: 0;
  z-index: 10;
  font-size: 0.85em;
  visibility: hidden;
  -webkit-box-shadow: 1px 2px 1px rgba(0,0,0,0.25);
  -moz-box-shadow: 1px 2px 1px rgba(0,0,0,0.25);
	width: 100%;
	white-space: normal;
}

header#header ul li.with-submenu > ul li ul {
  border-bottom: 1px solid #ebe3d3;
  display: block;
  padding-bottom: 0.125em;
  margin-bottom: 0.125em;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
}
/* ... */

